added packet structure for Algo

--- a/MDPAlgorithmCS/MDPAlgorithmCS/MDPAlgorithmCS.csproj
+++ b/MDPAlgorithmCS/MDPAlgorithmCS/MDPAlgorithmCS.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Folder Include="Object\" />
     <Folder Include="Interface\" />
+    <Folder Include="Network\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Object\IExplorer.cs" />
